hphp/hack/test/typecheck/reactive/mutable_args9.php.exp
File "mutable_args9.php", line 13, characters 9-10:
A mutable expression may not be passed as multiple arguments where at least one matching parameter is mutable. Matching parameter here is mutable (Typing[4269])
File "mutable_args9.php", line 13, characters 3-4:
This is where it was used before, being passed as maybe mutable
